// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dag/basic editable mode 1`] = `
<svg
  className="dag-wrapper Dag-root-6"
  height={500}
  width={500}
>
  <g
    className="graph"
  >
    <line
      className="connect-node Dag-dagEdge-9"
      onClick={[Function]}
    />
    <g
      className="node Dag-dagNode-7"
      onClick={[Function]}
    >
      <circle />
      <text
        className="Dag-dagNodeText-8"
      />
    </g>
    <g
      className="node Dag-dagNode-7"
      onClick={[Function]}
    >
      <circle />
      <text
        className="Dag-dagNodeText-8"
      />
    </g>
  </g>
</svg>
`;

exports[`Storyshots dag/basic no wrapper 1`] = `
<svg
  className="dag-wrapper Dag-root-1"
  height={500}
  width={500}
>
  <g
    className="graph"
  >
    <line
      className="connect-node Dag-dagEdge-4"
      onClick={[Function]}
    />
    <g
      className="node Dag-dagNode-2"
      onClick={[Function]}
    >
      <circle />
      <text
        className="Dag-dagNodeText-3"
      />
    </g>
    <g
      className="node Dag-dagNode-2"
      onClick={[Function]}
    >
      <circle />
      <text
        className="Dag-dagNodeText-3"
      />
    </g>
  </g>
</svg>
`;

exports[`Storyshots dag/themed paper wrapper (dark) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-43 MuiPaper-elevation2-47 MuiPaper-rounded-44"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <svg
      className="dag-wrapper Dag-root-70"
      height={500}
      width={500}
    >
      <g
        className="graph"
      >
        <line
          className="connect-node Dag-dagEdge-73"
          onClick={[Function]}
        />
        <g
          className="node Dag-dagNode-71"
          onClick={[Function]}
        >
          <circle />
          <text
            className="Dag-dagNodeText-72"
          />
        </g>
        <g
          className="node Dag-dagNode-71"
          onClick={[Function]}
        >
          <circle />
          <text
            className="Dag-dagNodeText-72"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (light) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-11 MuiPaper-elevation2-15 MuiPaper-rounded-12"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <svg
      className="dag-wrapper Dag-root-38"
      height={500}
      width={500}
    >
      <g
        className="graph"
      >
        <line
          className="connect-node Dag-dagEdge-41"
          onClick={[Function]}
        />
        <g
          className="node Dag-dagNode-39"
          onClick={[Function]}
        >
          <circle />
          <text
            className="Dag-dagNodeText-40"
          />
        </g>
        <g
          className="node Dag-dagNode-39"
          onClick={[Function]}
        >
          <circle />
          <text
            className="Dag-dagNodeText-40"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;
